# mule-flow-analyzer

./: .gitignore  .plantwebrc  LICENSE  README.md  RELEASING.md  build_release.py  default_properties.py  main.py  properties.py  pyproject.toml  requirements.txt  setup.py
.cursor/skills/mule-flow-analyzer/: SKILL.md
.cursor/skills/mule-flow-analyzer/scripts/: run_analyzer.py
.github/workflows/: ci.yml
docs/: configuration.md  python_usage.md
docs/examples/plantuml/: analyzer-test-nested-flowrefs-create-mode-true.txt  analyzer-test-nested-flowrefs.txt  anypoint-mq-queues.txt  async-operation.txt
src/: constants.py  exceptions.py  mule_flow_analyzer.py  mule_flow_element.py  sequence_diagram_generator.py
src/mule_flow_analyzer/: __init__.py
src/mule_flow_analyzer/analyzer/: __init__.py  mermaid_sequence_diagram_generator.py  mule_flow_analyzer.py  mule_flow_element.py  natural_language_description_generator.py  sequence_diagram_generator.py
src/mule_flow_analyzer/config/: __init__.py  constants.py  default_properties.py
src/mule_flow_analyzer/exceptions/: __init__.py  exceptions.py
src/mulesoft_flow_analyzer/: __init__.py
src/mulesoft_flow_analyzer/analyzer/: __init__.py  mule_flow_analyzer.py  mule_flow_element.py  sequence_diagram_generator.py
src/mulesoft_flow_analyzer/config/: __init__.py  default_properties.py
src/mulesoft_flow_analyzer/exceptions/: __init__.py
tests/: __init__.py  test_config.yaml
tests/mule/analyzer-tests/: pom.xml
tests/mule/analyzer-tests/src/main/mule/: analyzer-tests-nested-subflows.xml  apikit-auto-repairs.xml  async-operations.xml  auto-sales-lead-prc-api.xml  batch-job-flow.xml  control-flows-cache.xml  control-flows-scatter.xml  control-flows.xml  custom-connector-sapi.xml  custom-data-sources.xml  icons-test.xml  jms-transaction.xml  streaming.xml  tickets-apikit-os.xml
tests/mule/analyzer-tests/src/main/resources/: application-types.xml  log4j2.xml
tests/mule/analyzer-tests/src/main/resources/properties/: dummy.yaml  fake.properties
tests/mule/analyzer-tests/src/main/resources/weave/autogenerated/06fdd155-d0be-4d46-91e8-3f53b86bb069/: Input-Attributes.wev  Input-Payload.wev  Output-Attributes.wev  Output-Payload.wev
tests/mule/analyzer-tests/src/main/resources/weave/autogenerated/1c470001-2b2d-4568-8702-9755b4408d30/: Input-Attributes.wev  Input-Payload.wev  Output-Attributes.wev  Output-Payload.wev
tests/mule/analyzer-tests/src/main/resources/weave/autogenerated/ce410ef8-be02-4a09-942b-93104382b580/: Output-Attributes.wev
tests/mule/analyzer-tests/src/test/resources/: scratch.txt
tests/unit/: __init__.py  test_main.py  test_mule_flow_analyzer.py  test_mule_flow_element.py  test_natural_language_description_generator.py  test_sequence_diagram_generator.py
