[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mule-flow-analyzer"
version="1.0.0"
authors = [
    { name = "Brad McNaughton", email = "hello@bradmcnaughton.com" }
]
description = "A tool for analyzing Mule integration projects to generate sequence diagrams or natural language descriptions of each flow"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "xmltodict",
    "pyyaml",
    "plantweb",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/bradmcnaughton/mule-flow-analyzer"
"Bug Tracker" = "https://github.com/bradmcnaughton/mule-flow-analyzer/issues"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mule_flow_analyzer*"]
